impls/monero.dart/lib/src/generated_bindings_monero.g.dart


  bool MONERO_AddressBook_setDescription(
    ffi.Pointer<ffi.Void> addressBook_ptr,
    int rowId,
    ffi.Pointer<ffi.Char> description,
  ) {
    return _MONERO_AddressBook_setDescription(
      addressBook_ptr,
      rowId,
      description,
    );
  }

  late final _MONERO_AddressBook_setDescriptionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>, ffi.Size,
              ffi.Pointer<ffi.Char>)>>('MONERO_AddressBook_setDescription');
  late final _MONERO_AddressBook_setDescription =
      _MONERO_AddressBook_setDescriptionPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Char>)>();

  void MONERO_AddressBook_refresh(
    ffi.Pointer<ffi.Void> addressBook_ptr,
  ) {
    return _MONERO_AddressBook_refresh(
      addressBook_ptr,
    );
  }

  late final _MONERO_AddressBook_refreshPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'MONERO_AddressBook_refresh');
  late final _MONERO_AddressBook_refresh = _MONERO_AddressBook_refreshPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> MONERO_AddressBook_errorString(
    ffi.Pointer<ffi.Void> addressBook_ptr,
  ) {
    return _MONERO_AddressBook_errorString(
      addressBook_ptr,
    );
  }

  late final _MONERO_AddressBook_errorStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('MONERO_AddressBook_errorString');
  late final _MONERO_AddressBook_errorString =
      _MONERO_AddressBook_errorStringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int MONERO_AddressBook_errorCode(
    ffi.Pointer<ffi.Void> addressBook_ptr,
  ) {
    return _MONERO_AddressBook_errorCode(
      addressBook_ptr,
    );
  }

  late final _MONERO_AddressBook_errorCodePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'MONERO_AddressBook_errorCode');
  late final _MONERO_AddressBook_errorCode = _MONERO_AddressBook_errorCodePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int MONERO_AddressBook_lookupPaymentID(
    ffi.Pointer<ffi.Void> addressBook_ptr,
    ffi.Pointer<ffi.Char> payment_id,
  ) {
    return _MONERO_AddressBook_lookupPaymentID(
      addressBook_ptr,
      payment_id,
    );
  }

  late final _MONERO_AddressBook_lookupPaymentIDPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('MONERO_AddressBook_lookupPaymentID');
  late final _MONERO_AddressBook_lookupPaymentID =
      _MONERO_AddressBook_lookupPaymentIDPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int MONERO_CoinsInfo_blockHeight(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_blockHeight(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_blockHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'MONERO_CoinsInfo_blockHeight');
  late final _MONERO_CoinsInfo_blockHeight = _MONERO_CoinsInfo_blockHeightPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> MONERO_CoinsInfo_hash(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_hash(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_hashPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('MONERO_CoinsInfo_hash');
  late final _MONERO_CoinsInfo_hash = _MONERO_CoinsInfo_hashPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int MONERO_CoinsInfo_internalOutputIndex(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_internalOutputIndex(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_internalOutputIndexPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Void>)>>(
          'MONERO_CoinsInfo_internalOutputIndex');
  late final _MONERO_CoinsInfo_internalOutputIndex =
      _MONERO_CoinsInfo_internalOutputIndexPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int MONERO_CoinsInfo_globalOutputIndex(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_globalOutputIndex(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_globalOutputIndexPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'MONERO_CoinsInfo_globalOutputIndex');
  late final _MONERO_CoinsInfo_globalOutputIndex =
      _MONERO_CoinsInfo_globalOutputIndexPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  bool MONERO_CoinsInfo_spent(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_spent(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_spentPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'MONERO_CoinsInfo_spent');
  late final _MONERO_CoinsInfo_spent = _MONERO_CoinsInfo_spentPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Void>)>();

  bool MONERO_CoinsInfo_frozen(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_frozen(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_frozenPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'MONERO_CoinsInfo_frozen');
  late final _MONERO_CoinsInfo_frozen = _MONERO_CoinsInfo_frozenPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Void>)>();

  int MONERO_CoinsInfo_spentHeight(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_spentHeight(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_spentHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'MONERO_CoinsInfo_spentHeight');
  late final _MONERO_CoinsInfo_spentHeight = _MONERO_CoinsInfo_spentHeightPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int MONERO_CoinsInfo_amount(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_amount(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_amountPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'MONERO_CoinsInfo_amount');
  late final _MONERO_CoinsInfo_amount = _MONERO_CoinsInfo_amountPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>)>();

  bool MONERO_CoinsInfo_rct(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_rct(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_rctPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'MONERO_CoinsInfo_rct');
  late final _MONERO_CoinsInfo_rct = _MONERO_CoinsInfo_rctPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Void>)>();

  bool MONERO_CoinsInfo_keyImageKnown(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_keyImageKnown(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_keyImageKnownPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'MONERO_CoinsInfo_keyImageKnown');
  late final _MONERO_CoinsInfo_keyImageKnown =
      _MONERO_CoinsInfo_keyImageKnownPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>)>();

  int MONERO_CoinsInfo_pkIndex(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_pkIndex(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_pkIndexPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Void>)>>(
          'MONERO_CoinsInfo_pkIndex');
  late final _MONERO_CoinsInfo_pkIndex = _MONERO_CoinsInfo_pkIndexPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int MONERO_CoinsInfo_subaddrIndex(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_subaddrIndex(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_subaddrIndexPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<ffi.Void>)>>(
          'MONERO_CoinsInfo_subaddrIndex');
  late final _MONERO_CoinsInfo_subaddrIndex = _MONERO_CoinsInfo_subaddrIndexPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int MONERO_CoinsInfo_subaddrAccount(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_subaddrAccount(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_subaddrAccountPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<ffi.Void>)>>(
          'MONERO_CoinsInfo_subaddrAccount');
  late final _MONERO_CoinsInfo_subaddrAccount =
      _MONERO_CoinsInfo_subaddrAccountPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> MONERO_CoinsInfo_address(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_address(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_addressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('MONERO_CoinsInfo_address');
  late final _MONERO_CoinsInfo_address = _MONERO_CoinsInfo_addressPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> MONERO_CoinsInfo_addressLabel(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_addressLabel(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_addressLabelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('MONERO_CoinsInfo_addressLabel');
  late final _MONERO_CoinsInfo_addressLabel = _MONERO_CoinsInfo_addressLabelPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> MONERO_CoinsInfo_keyImage(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_keyImage(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_keyImagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('MONERO_CoinsInfo_keyImage');
  late final _MONERO_CoinsInfo_keyImage = _MONERO_CoinsInfo_keyImagePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int MONERO_CoinsInfo_unlockTime(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_unlockTime(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_unlockTimePtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'MONERO_CoinsInfo_unlockTime');
  late final _MONERO_CoinsInfo_unlockTime = _MONERO_CoinsInfo_unlockTimePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  bool MONERO_CoinsInfo_unlocked(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_unlocked(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_unlockedPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'MONERO_CoinsInfo_unlocked');
  late final _MONERO_CoinsInfo_unlocked = _MONERO_CoinsInfo_unlockedPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> MONERO_CoinsInfo_pubKey(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_pubKey(
      coinsInfo_ptr,
    );
  }

  late final _MONERO_CoinsInfo_pubKeyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('MONERO_CoinsInfo_pubKey');
  late final _MONERO_CoinsInfo_pubKey = _MONERO_CoinsInfo_pubKeyPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  bool MONERO_CoinsInfo_coinbase(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _MONERO_CoinsInfo_coinbase(
      coinsInfo_ptr,
    );
  }
